--- a/小程序模板/视频模板/videotemplate12/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate12/pages/index/index.css
@@ -2,7 +2,21 @@
     margin: .2rem .57rem;
     display: flex;
 }
+.loading{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    background:rgba(rgba(122, 121, 121, 0), rgb(93, 94, 93)gb(139, 139, 141), 0.9) ;
+    font-size: 0.21rem;
+    color: #000000;
+    font-weight: 600;
+    z-index: 100;
 
+}
 .rowlike view {
     flex: 1;
     text-align: center;
