--- a/小程序模板/比分模板/imgmobanrace24/pages/race/race.css
+++ b/小程序模板/比分模板/imgmobanrace24/pages/race/race.css
@@ -225,7 +225,7 @@
 .hTotalScore {
   width: 0.6rem;
   text-align: center;
-  margin: 0 0.05rem;
+  margin: 0.2rem 0.05rem;
 }
 
 .content_bottom {
@@ -253,8 +253,8 @@
 }
 
 .hicon,.aicon{
-  width: 0.2rem;
-  height: 0.2rem;
+  width: 0.5rem;
+  height: 0.5rem;
 }
 .share_view{
   padding-top: 0.1rem;
@@ -263,6 +263,11 @@
   margin-left: 0.3rem;
   width: 0.22rem;
   height: 0.22rem;
+}
+.aname_view , .hanme_view {
+  width: 1rem;
+  overflow: hidden;
+  text-overflow:ellipsis;
 }
 .logo1{
   width: 0.82rem;
