--- a/小程序模板/视频模板/videotemplate16/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate16/pages/index/index.css
@@ -316,6 +316,7 @@
     width: 38%;
 }
 .content_image{
+    border-radius: 0.05rem;
     width: 100%;
     height: 1.3rem;
 }
@@ -353,4 +354,9 @@
     bottom: 0;
     top: 0;
     margin: auto;
+}
+.share3{
+    margin-left: 1.5rem;
+    width: 0.2rem;
+    height: 0.2rem;
 }
