--- a/小程序模板/图片模板/p7/pages/index/index.css
+++ b/小程序模板/图片模板/p7/pages/index/index.css
@@ -282,7 +282,7 @@
     top: 0.02rem;
 } */
 .content_image {
-    width: 40%;
+    width: 100%;
     height: 1.4rem;
     border-radius: 0.05rem;
 }
@@ -296,14 +296,17 @@
 }
 
 .news_time_view {
-    margin: 0 0.1rem;
-    position: absolute;
+    margin: 0.1rem 0.1rem;
+    /* position: absolute;
 
-    bottom: 0.02rem;
+    bottom: 0.02rem; */
     color: #000;
 }
-
+.box:nth-child(2n+1) .img_view{
+    margin-left: 2%;
+}
 .img_view {
+    width: 49%;
     margin-top: 0.1rem;
     position: relative;
 }
