--- a/小程序模板/比分模板/imgmobanrace26/pages/race/race.css
+++ b/小程序模板/比分模板/imgmobanrace26/pages/race/race.css
@@ -248,7 +248,6 @@
   height: 0.32rem;
 }
 .content_bottom{
-  text-align: center;
   padding: 0.07rem 0 ;
 }
 
@@ -286,4 +285,15 @@
   padding: 0.03rem 0.06rem;
   border: 1px solid #1cf0f0;
   border-radius: 0.05rem;
+}
+.hCornerKick{
+ margin-left: 34%;
+}
+.aCornerKick{
+  margin-left: 23%;
+}
+.hCornerKick , .aCornerKick{
+  color: #ffffff;
+  padding: 0.05rem;
+  background-color: rgb(23, 214, 240);
 }
