视频模板15 发布奶茶视频 修改点赞数量前端本地修改数据 视频模板15删除底部tabbar栏

--- a/小程序模板/视频模板/videotemplate18/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate18/pages/index/index.css
@@ -333,8 +333,8 @@
 }
 .news_title{
     margin: 0.1rem 0 ;
-    color:#000;
-    font-size: 0.19rem;
+    color:rgb(47, 139, 226);
+    font-size: 0.16rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .news_goods{
@@ -363,8 +363,11 @@
     height: 0.2rem;
 }
 .content{
-    border: 0.02rem solid #4e89e1;
     margin: 0.05rem 0;
     padding: 0.1rem;
     border-radius: 0.05rem;
+}
+.logo{
+    width: 0.2rem;
+    height: 0.2rem;
 }
