--- a/小程序模板/视频模板/videotemplate18/app.css
+++ b/小程序模板/视频模板/videotemplate18/app.css
@@ -59,7 +59,7 @@ body {
 /* 卡片区域 */
 
 .card-area {
-    background: #FFF;
+    background: rgb(255, 255, 255);
     margin: .13rem .17rem 0 .17rem;
     border-radius: 8px 8px;
     overflow: hidden;
