--- a/小程序模板/视频模板/videotemplate17/pages/detail/detail.css
+++ b/小程序模板/视频模板/videotemplate17/pages/detail/detail.css
@@ -105,7 +105,16 @@
 #text img {
     width: 100% !important;
 }
-
+.news_goods{
+    background-color: #6cb9e6;
+    color: #FFF;
+    text-align: center;
+    padding: 0.15rem 0 ;
+    border-radius: 0.05rem;
+}
+.red{
+    color: #f70709;
+}
 /* template */
 
 /* #myVideo {
