--- a/小程序模板/比分模板/imgmobanrace30/pages/race/race.css
+++ b/小程序模板/比分模板/imgmobanrace30/pages/race/race.css
@@ -293,10 +293,10 @@
   border-radius: 0.05rem;
 }
 .hCornerKick{
- margin-left: 34%;
+ margin-right: 2%;
 }
 .aCornerKick{
-  margin-left: 23%;
+  margin-left: 2%;
 }
 .hCornerKick , .aCornerKick{
   color: #ffffff;
