--- a/小程序模板/中转站/嘿嗨下载/style/body.css
+++ b/小程序模板/中转站/嘿嗨下载/style/body.css
@@ -1,5 +1,5 @@
 
-@media screen and (min-height: 812px) and (max-height: 813px) {
+@media screen and (min-height: 812px) and (max-height: 813px) and (min-width:375px) and (max-width:376px){
     #web{
         background: url('../iamge/web/bg.jpg');
         background-repeat: no-repeat;
@@ -37,7 +37,7 @@
         display: none;
     }
 }
-@media screen and (min-height: 736px) and (max-height: 812px) {
+@media screen and (min-height: 736px) and (max-height: 812px) and (min-width:377px) and (max-width:414px){
     #web{
         background: url('../iamge/web/bg.jpg');
         background-repeat: no-repeat;
@@ -75,7 +75,7 @@
         display: none;
     }
 }
-@media screen and (min-height: 667px) and (max-height: 736px) {
+@media screen and (min-height: 667px) and (max-height: 736px) and (min-width:375px) and (max-width:376px){
     #web{
         background: url('../iamge/web/bg.jpg');
         background-repeat: no-repeat;
@@ -91,8 +91,8 @@
         width: 247px;
         height: 47px;
         position: absolute;
-        bottom: 15%;
-        left: 19%;
+        bottom: 14%;
+        left: 18%;
     }
     .ios:hover{
         background: url('../iamge/web/ios1.png');
@@ -113,7 +113,45 @@
         display: none;
     }
 }
-@media screen and (min-height: 568px) and (max-height: 667px) {
+@media screen and (min-height: 568px) and (max-height: 667px) and (min-width:320px) and (max-width:376px){
+    #web{
+        background: url('../iamge/web/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        position: relative;
+        width: 100%;
+        min-height: 812px;
+        height: 812px;
+    }
+    .ios1{
+        background: url('../iamge/web/ios.png');
+        background-size: 100%;
+        width: 247px;
+        height: 47px;
+        position: absolute;
+        bottom: 20%;
+        left: 17%;
+    }
+    .ios:hover{
+        background: url('../iamge/web/ios1.png');
+    }
+    .andr:hover{
+        background: url('../iamge/web/and1.png');
+    }
+    .andr1{
+        width: 247px;
+        height: 47px;
+        background: url('../iamge/web/and.png');
+        background-size: 100%;
+        position: absolute;
+        bottom: 10%;
+        left: 17%;
+    }
+    #pc{
+        display: none;
+    }
+}
+@media screen and (min-height: 568px) and (max-height: 667px) and (min-width:320px) and (max-width:321px){
     #web{
         background: url('../iamge/web/bg.jpg');
         background-repeat: no-repeat;
@@ -130,7 +168,7 @@
         height: 47px;
         position: absolute;
         bottom: 27%;
-        left: 13%;
+        left: 12%;
     }
     .ios:hover{
         background: url('../iamge/web/ios1.png');
@@ -145,13 +183,128 @@
         background-size: 100%;
         position: absolute;
         bottom: 18%;
-        left: 13%;
+        left: 12%;
     }
     #pc{
         display: none;
     }
 }
-@media screen and (min-height: 731px) and (max-height: 823px) {
+@media screen and (min-height: 568px) and (max-height: 667px) and (min-width:375px) and (max-width:376px){
+    #web{
+        background: url('../iamge/web/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        position: relative;
+        width: 100%;
+        min-height: 812px;
+        height: 812px;
+    }
+    .ios1{
+        background: url('../iamge/web/ios.png');
+        background-size: 100%;
+        width: 247px;
+        height: 47px;
+        position: absolute;
+        bottom: 15%;
+        left: 16%;
+    }
+    .ios:hover{
+        background: url('../iamge/web/ios1.png');
+    }
+    .andr:hover{
+        background: url('../iamge/web/and1.png');
+    }
+    .andr1{
+        width: 247px;
+        height: 47px;
+        background: url('../iamge/web/and.png');
+        background-size: 100%;
+        position: absolute;
+        bottom: 6%;
+        left: 16%;
+    }
+    #pc{
+        display: none;
+    }
+}
+
+@media screen and (min-height: 739px) and (max-height: 740px){
+    #web{
+        background: url('../iamge/web/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        position: relative;
+        width: 100%;
+        min-height: 812px;
+        height: 812px;
+    }
+    .ios1{
+        background: url('../iamge/web/ios.png');
+        background-size: 100%;
+        width: 247px;
+        height: 47px;
+        position: absolute;
+        bottom: 20%;
+        left: 17%;
+    }
+    .ios:hover{
+        background: url('../iamge/web/ios1.png');
+    }
+    .andr:hover{
+        background: url('../iamge/web/and1.png');
+    }
+    .andr1{
+        width: 247px;
+        height: 47px;
+        background: url('../iamge/web/and.png');
+        background-size: 100%;
+        position: absolute;
+        bottom: 10%;
+        left: 17%;
+    }
+    #pc{
+        display: none;
+    }
+}
+@media screen and (min-height: 741px) and (max-height: 823px){
+    #web{
+        background: url('../iamge/web/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        position: relative;
+        width: 100%;
+        min-height: 812px;
+        height: 812px;
+    }
+    .ios1{
+        background: url('../iamge/web/ios.png');
+        background-size: 100%;
+        width: 247px;
+        height: 47px;
+        position: absolute;
+        bottom: 10%;
+        left: 17%;
+    }
+    .ios:hover{
+        background: url('../iamge/web/ios1.png');
+    }
+    .andr:hover{
+        background: url('../iamge/web/and1.png');
+    }
+    .andr1{
+        width: 247px;
+        height: 47px;
+        background: url('../iamge/web/and.png');
+        background-size: 100%;
+        position: absolute;
+        bottom: 2%;
+        left: 17%;
+    }
+    #pc{
+        display: none;
+    }
+}
+@media screen and (min-height: 731px) and (max-height: 736px) and(min-width:414px) and(max-width:415px){
     #web{
         background: url('../iamge/web/bg.jpg');
         background-repeat: no-repeat;
@@ -189,7 +342,84 @@
         display: none;
     }
 }
-@media screen and (min-height: 640px) and (max-height: 731px) {
+
+@media screen and (min-height: 731px) and (max-height: 737px) and(min-width:413px) and(min-width:415px){
+    #web{
+        background: url('../iamge/web/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        position: relative;
+        width: 100%;
+        min-height: 812px;
+        height: 812px;
+    }
+    .ios1{
+        background: url('../iamge/web/ios.png');
+        background-size: 100%;
+        width: 247px;
+        height: 47px;
+        position: absolute;
+        bottom: 10%;
+        left: 19%;
+    }
+    .ios:hover{
+        background: url('../iamge/web/ios1.png');
+    }
+    .andr:hover{
+        background: url('../iamge/web/and1.png');
+    }
+    .andr1{
+        width: 247px;
+        height: 47px;
+        background: url('../iamge/web/and.png');
+        background-size: 100%;
+        position: absolute;
+        bottom: 2%;
+        left: 19%;
+    }
+    #pc{
+        display: none;
+    }
+}
+@media screen and (min-height: 740px) and (max-height: 741px) and(min-width:360px)  and(min-width:361px){
+    #web{
+        background: url('../iamge/web/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        position: relative;
+        width: 100%;
+        min-height: 812px;
+        height: 812px;
+    }
+    .ios1{
+        background: url('../iamge/web/ios.png');
+        background-size: 100%;
+        width: 247px;
+        height: 47px;
+        position: absolute;
+        bottom: 19%;
+        left: 16%;
+    }
+    .ios:hover{
+        background: url('../iamge/web/ios1.png');
+    }
+    .andr:hover{
+        background: url('../iamge/web/and1.png');
+    }
+    .andr1{
+        width: 247px;
+        height: 47px;
+        background: url('../iamge/web/and.png');
+        background-size: 100%;
+        position: absolute;
+        bottom: 10%;
+        left: 16%;
+    }
+    #pc{
+        display: none;
+    }
+}
+@media screen and (min-height: 639px) and (max-height: 640px) and (min-width:320px) and(max-width:360px){
     #web{
         background: url('../iamge/web/bg.jpg');
         background-repeat: no-repeat;
@@ -227,7 +457,7 @@
         display: none;
     }
 }
-@media screen and (min-width: 1201px) and (max-width: 1921px) {
+@media screen and (max-width:1920px) and (min-width: 1282px) {
     #pc{
         background: url('../iamge/bg.jpg');
         background-size: 100%;
@@ -254,6 +484,41 @@
         position: absolute;
         bottom: 60px;
         right:24%;
+    }
+    .andr:hover{
+        background: url('../iamge/and1.png');
+    }
+    #web{
+         display: none;
+    }
+}
+@media screen and (min-width: 1201px) and (max-width:1281px) {
+    #pc{
+        background: url('../iamge/bg.jpg');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        position: relative;
+        width: 100%;
+        min-height: 1080px;
+    }
+    .ios{
+        width: 387px;
+        height: 92px;
+        background: url('../iamge/ios.png');
+        position: absolute;
+        bottom: 35%;
+        left: 20%;
+    }
+    .ios:hover{
+        background: url('../iamge/ios1.png');
+    }
+    .andr{
+        width: 387px;
+        height: 92px;
+        background: url('../iamge/and.png');
+        position: absolute;
+        bottom: 35%;
+        right:16%;
     }
     .andr:hover{
         background: url('../iamge/and1.png');
