--- a/小程序模板/视频模板/videotemplate25/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate25/pages/index/index.css
@@ -326,8 +326,10 @@
     height: 0.15rem;
 }
 .news_time{
-    color: #747474;
-    margin-left: 0.2rem;
+    position: absolute;
+    bottom: 0.05rem;
+    right: 0.05rem;
+    color: #fff;
 }
 .news_title{
     margin: 0.1rem 0 ;
@@ -382,4 +384,10 @@
     padding: 0.01rem  0.03rem;
     border-radius: 0.05rem;
     margin-left: 0.1rem;
+}
+.logo_view{
+    position: absolute;
+    top: 0.01rem;
+    left: 0.05rem;
+
 }
