--- a/小程序模板/中转站/嘿嗨下载/style/body.css
+++ b/小程序模板/中转站/嘿嗨下载/style/body.css
@@ -1,529 +1,35 @@
-
-@media screen and (min-height: 812px) and (max-height: 813px) and (min-width:375px) and (max-width:376px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 15%;
-        left: 18%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 7%;
-        left: 18%;
-    }
-    #pc{
-        display: none;
-    }
+#pc{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
-@media screen and (min-height: 736px) and (max-height: 812px) and (min-width:377px) and (max-width:414px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 9%;
-        left: 19%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 2%;
-        left: 19%;
-    }
-    #pc{
-        display: none;
-    }
+.bgimg{
+    width: 100%;
+    height: 100%;
 }
-@media screen and (min-height: 667px) and (max-height: 736px) and (min-width:375px) and (max-width:376px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 14%;
-        left: 18%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 6%;
-        left: 19%;
-    }
-    #pc{
-        display: none;
-    }
+.ios{
+    width: 2rem;
+    height: .47rem;
+    background: url('../iamge/ios.png');
+    background-size: 100%;
+    position: absolute;
+    bottom: 0.28rem;
+    left: 27%;
 }
-@media screen and (min-height: 568px) and (max-height: 667px) and (min-width:320px) and (max-width:376px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 20%;
-        left: 17%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 10%;
-        left: 17%;
-    }
-    #pc{
-        display: none;
-    }
+.ios:hover{
+    background: url('../iamge/ios1.png');
+    background-size: 100%;
 }
-@media screen and (min-height: 568px) and (max-height: 667px) and (min-width:320px) and (max-width:321px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 27%;
-        left: 12%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 18%;
-        left: 12%;
-    }
-    #pc{
-        display: none;
-    }
+.andr{
+    width: 2rem;
+    height: .47rem;
+    background: url('../iamge/and.png');
+    background-size: 100%;
+    position: absolute;
+    bottom: 0.28rem;
+    right:25%
 }
-@media screen and (min-height: 568px) and (max-height: 667px) and (min-width:375px) and (max-width:376px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 15%;
-        left: 16%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 6%;
-        left: 16%;
-    }
-    #pc{
-        display: none;
-    }
-}
-
-@media screen and (min-height: 739px) and (max-height: 740px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 20%;
-        left: 17%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 10%;
-        left: 17%;
-    }
-    #pc{
-        display: none;
-    }
-}
-@media screen and (min-height: 741px) and (max-height: 823px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 10%;
-        left: 17%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 2%;
-        left: 17%;
-    }
-    #pc{
-        display: none;
-    }
-}
-@media screen and (min-height: 731px) and (max-height: 736px) and(min-width:414px) and(max-width:415px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 10%;
-        left: 20%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 2%;
-        left: 20%;
-    }
-    #pc{
-        display: none;
-    }
-}
-
-@media screen and (min-height: 731px) and (max-height: 737px) and(min-width:413px) and(min-width:415px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 10%;
-        left: 19%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 2%;
-        left: 19%;
-    }
-    #pc{
-        display: none;
-    }
-}
-@media screen and (min-height: 740px) and (max-height: 741px) and(min-width:360px)  and(min-width:361px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 19%;
-        left: 16%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 10%;
-        left: 16%;
-    }
-    #pc{
-        display: none;
-    }
-}
-@media screen and (min-height: 639px) and (max-height: 640px) and (min-width:320px) and(max-width:360px){
-    #web{
-        background: url('../iamge/web/bg.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        position: relative;
-        width: 100%;
-        min-height: 812px;
-        height: 812px;
-    }
-    .ios1{
-        background: url('../iamge/web/ios.png');
-        background-size: 100%;
-        width: 247px;
-        height: 47px;
-        position: absolute;
-        bottom: 18%;
-        left: 16%;
-    }
-    .ios:hover{
-        background: url('../iamge/web/ios1.png');
-    }
-    .andr:hover{
-        background: url('../iamge/web/and1.png');
-    }
-    .andr1{
-        width: 247px;
-        height: 47px;
-        background: url('../iamge/web/and.png');
-        background-size: 100%;
-        position: absolute;
-        bottom: 9%;
-        left: 16%;
-    }
-    #pc{
-        display: none;
-    }
-}
-@media screen and (max-width:1920px) and (min-width: 1282px) {
-    #pc{
-        background: url('../iamge/bg.jpg');
-        background-size: 100%;
-        background-repeat: no-repeat;
-        position: relative;
-        width: 100%;
-        min-height: 1080px;
-    }
-    .ios{
-        width: 387px;
-        height: 92px;
-        background: url('../iamge/ios.png');
-        position: absolute;
-        bottom: 60px;
-        left:25%;
-    }
-    .ios:hover{
-        background: url('../iamge/ios1.png');
-    }
-    .andr{
-        width: 387px;
-        height: 92px;
-        background: url('../iamge/and.png');
-        position: absolute;
-        bottom: 60px;
-        right:24%;
-    }
-    .andr:hover{
-        background: url('../iamge/and1.png');
-    }
-    #web{
-         display: none;
-    }
-}
-@media screen and (min-width: 1201px) and (max-width:1281px) {
-    #pc{
-        background: url('../iamge/bg.jpg');
-        background-size: 100%;
-        background-repeat: no-repeat;
-        position: relative;
-        width: 100%;
-        min-height: 1080px;
-    }
-    .ios{
-        width: 387px;
-        height: 92px;
-        background: url('../iamge/ios.png');
-        position: absolute;
-        bottom: 35%;
-        left: 20%;
-    }
-    .ios:hover{
-        background: url('../iamge/ios1.png');
-    }
-    .andr{
-        width: 387px;
-        height: 92px;
-        background: url('../iamge/and.png');
-        position: absolute;
-        bottom: 35%;
-        right:16%;
-    }
-    .andr:hover{
-        background: url('../iamge/and1.png');
-    }
-    #web{
-         display: none;
-    }
+.andr:hover{
+    background: url('../iamge/and1.png');
+    background-size: 100%;
 }
