--- a/小程序模板/比分模板/imgmobanrace31/pages/race/race.css
+++ b/小程序模板/比分模板/imgmobanrace31/pages/race/race.css
@@ -265,7 +265,7 @@
   background-color: #fff;
 }
 .logo{
-  margin-left: 0.3rem;
+  /* margin-left: 0.3rem; */
   width: 0.22rem;
   height: 0.22rem;
 }
