综合模板4提交

--- a/小程序模板/综合模板/complex4/app.css
+++ b/小程序模板/综合模板/complex4/app.css
@@ -12,7 +12,9 @@ body {
     color: #333;
     background-color: #f5f5f5
 }
-
+.span_view{
+    display: inline-block;
+}
 .left{
     float: left;
 }
