--- a/小程序模板/综合模板/complex4/pages/race/race.css
+++ b/小程序模板/综合模板/complex4/pages/race/race.css
@@ -122,23 +122,21 @@
 }
 .lname {
   text-align: left;
-  width: 1rem;
   margin-left: 0.05rem;
   /* background-color: #fff; */
   padding: 0.05rem;
   border-radius: 0.04rem;
-  color: #7170b4;
+  color: #7a2ec2;
   font-size: 0.13rem;
   font-weight: 600;
 }
 .lname1 {
   text-align: left;
-  width: 0.65rem;
   margin-left: 0.05rem;
   /* background-color: #fff; */
   padding: 0.05rem;
   border-radius: 0.04rem;
-  color: #7170b4;
+  color: #7a2ec2;
   font-size: 0.13rem;
   font-weight: 600;
 }
@@ -154,25 +152,20 @@
 }
 
 .gameStage {
-  /* position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto; */
-  color: #a60910;
-  width: 0.7rem;
+  font-weight: 600;
+  color: #46ce51;
   text-align: center;
 }
 
 .hname {
   max-width: 1.45rem;
   color: #000000;
-
   text-align: right;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
 }
 
 .hTotalScore {
@@ -208,11 +201,12 @@
 .aname {
   max-width: 1.4rem;
   color: #000000;
-
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
 }
 
 .content_left {
@@ -233,7 +227,7 @@
 .hTotalScore {
   width: 0.6rem;
   text-align: center;
-  margin: 0 0.05rem;
+  margin: 0.08rem 0.05rem;
 }
 
 .content_bottom {
@@ -256,21 +250,30 @@
   height: 0.32rem;
 }
 .content_bottom{
-  text-align: center;
   padding: 0.07rem 0 ;
 }
 
 .hicon,.aicon{
-  width: 0.2rem;
-  height: 0.2rem;
+  width: 0.32rem;
+  height: 0.32rem;
 }
 .share_view{
-  padding-top: 0.1rem;
+  position: absolute;
+  right: 0.05rem;
+}
+.logo_view{
+  margin-top: 0.05rem;
+  background-color: #fff;
 }
 .logo{
-  margin-left: 0.3rem;
+  /* margin-left: 0.3rem; */
   width: 0.22rem;
   height: 0.22rem;
+}
+.aname_view , .hanme_view {
+  width: 1rem;
+  overflow: hidden;
+  text-overflow:ellipsis;
 }
 .logo1{
   width: 0.82rem;
@@ -280,13 +283,25 @@
   width: 0.22rem;
   height: 0.22rem;
 }
+
 .tuijian_view{
   margin: 0.1rem 0.1rem 0;
 }
 .tuijian{
   font-size: 0.14rem;
-  color: rgb(65, 167, 235);
+  color: rgb(35, 144, 218);
   padding: 0.03rem 0.06rem;
   border: 1px solid #1cf0f0;
   border-radius: 0.05rem;
+}
+.hCornerKick{
+ margin-right: 2%;
+}
+.aCornerKick{
+  margin-left: 2%;
+}
+.hCornerKick , .aCornerKick{
+  color: #ffffff;
+  padding: 0.05rem;
+  background-color: rgb(23, 214, 240);
 }
