综合模板视频详情点赞按钮样式迭代修改

--- a/小程序模板/综合模板/complex4/app.css
+++ b/小程序模板/综合模板/complex4/app.css
@@ -21,6 +21,9 @@ body {
 .right{
     float: right;
 }
+.span_view{
+    display: inline-block;
+}
 .centerimg{
     display: flex;
     justify-content: center;
