--- a/小程序模板/综合模板/complex3/app.css
+++ b/小程序模板/综合模板/complex3/app.css
@@ -19,6 +19,9 @@ body {
 .right{
     float: right;
 }
+.span_view{
+    display: inline-block;
+}
 .centerimg{
     display: flex;
     justify-content: center;
