--- a/小程序模板/比分模板/imgmobanrace34/pages/videodetail/videodetail.css
+++ b/小程序模板/比分模板/imgmobanrace34/pages/videodetail/videodetail.css
@@ -77,3 +77,12 @@
   margin: 0.15rem;
   border-radius: 0.05rem;
 }
+.gameStage{
+  font-size: 0.21rem;
+  color: deepskyblue;
+  text-align: center;
+  width: 92%;
+  line-height: 0.5rem;
+  margin: auto;
+  background-color: #fff;
+}
