--- a/小程序模板/视频模板/videotemplate29/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate29/pages/index/index.css
@@ -326,10 +326,8 @@
     height: 0.15rem;
 }
 .news_time{
-    position: absolute;
-    bottom: 0.05rem;
-    right: 0.05rem;
-    color: #fff;
+    margin-left: 0.05rem;
+    color: #000;
 }
 .news_title{
     margin: 0.1rem 0 ;
@@ -366,7 +364,7 @@
     margin: auto;
 }
 .share3{
-    margin-left: 1rem;
+    margin-left: 0.8rem;
     width: 0.2rem;
     height: 0.2rem;
 }
