--- a/中转站/SMVIP/style/web.css
+++ b/中转站/SMVIP/style/web.css
@@ -1,1 +1,97 @@
-html{font-size:calc(100vw/7.5);}
+html {
+    font-size: calc(100vw/7.5);
+}
+
+.h5 {
+    position: relative;
+}
+
+.bgimg {
+    width: 100%;
+    height: 100%;
+}
+
+.image_div {
+    position: absolute;
+    width: 4.3rem;
+    height: 1.04rem;
+    background-size: 100%;
+    left: 1.56rem;
+}
+#shanmao{
+    background-image: url('../image/web/1.png');
+    top:11.63rem ;
+}
+#ledong{
+    background-image: url('../image/web/2.png');
+    top:13.17rem ;
+}
+#youhui{
+    background-image: url('../image/web/3.png');
+    top: 14.71rem;
+}
+#shanmao:hover{
+    background-image: url('../image/web/1-1.png');
+   
+}
+#ledong:hover{
+    background-image: url('../image/web/2点击.png');
+}
+#youhui:hover{
+    background-image: url('../image/web/3点击.png');
+}
+#alert_box{
+    position: absolute;
+    display: none;
+    left: 0;
+    top: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(26, 29, 34, 0.7);
+}
+.img_box{
+    position: relative;
+}
+.alert_img{
+    position: absolute;
+    top: 5.12rem;
+    width: 7.5rem;
+    height: 7rem;
+}
+.x{
+    position: absolute;
+    left: 6.27rem;
+    top: 5.52rem;
+    width: 0.6rem;
+    height: 0.6rem;
+}
+#x{
+  
+}
+.x:hover {
+    cursor: pointer;
+    transition-duration: 1s;
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    /* IE 9 */
+    -moz-transform: rotate(180deg);
+    /* Firefox */
+    -webkit-transform: rotate(180deg);
+    /* Safari 和 Chrome */
+    -o-transform: rotate(180deg);
+    /* Opera */
+}
+.kefu{
+    background-image: url('../image/web/kefu-1.png');
+    background-size: 100%;
+    width: 2.26rem;
+    height: 0.72rem;
+    position: absolute;
+    top: 9.23rem;
+    left: 2.67rem;
+
+}
+.kefu:hover{
+    background-image: url('../image/web/kefu-点击.png');
+}
