--- a/中转站/MX2/style/web.css
+++ b/中转站/MX2/style/web.css
@@ -15,12 +15,15 @@ html {
     background-size: 100%;
     width: 4.9rem;
     height: 1.15rem;
-    left: 1.2rem;
+    /* left: 1.28rem; */
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .full {
     background-image: url("../image/h5/进入.png");
-    top: 6.98rem;
+    top: 9.78rem;
 }
 
 .full:hover {
@@ -28,21 +31,21 @@ html {
 }
 
 .and {
-    background-image: url("../image/h5/and.png");
-    top: 8.55rem;
+    background-image: url("../image/h5/全站.png");
+    top: 11.53rem;
 }
 
 .and:hover {
-    background-image: url("../image/h5/and点击.png");
+    background-image: url("../image/h5/全站点击.png");
 }
 
 .ios {
-    background-image: url("../image/h5/ios.png");
-    top: 10.12rem;
+    background-image: url("../image/h5/体育.png");
+    top: 13.28rem;
 }
 
 .ios:hover {
-    background-image: url("../image/h5/ios点击.png");
+    background-image: url("../image/h5/体育-点击png.png");
 }
 
 .img_div2 {
