视频模板34底库

--- a/小程序模板/比分模板2.0/imgmobanrace6/pages/race/race.css
+++ b/小程序模板/比分模板2.0/imgmobanrace6/pages/race/race.css
@@ -344,9 +344,9 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  position: absolute;
+  /* position: absolute;
   top:0.9rem;
-  left:0.03rem;
+  left:0.03rem; */
 }
 .hotCount{
   color: #f00;
