视频模板35 底库

--- a/小程序模板/比分模板2.0/imgmobanrace7/pages/race/race.css
+++ b/小程序模板/比分模板2.0/imgmobanrace7/pages/race/race.css
@@ -37,7 +37,10 @@
   align-items: center;
   justify-content: space-between;
 }
-
+.gameTimeFormat1{
+  color: #000;
+  margin-left: 0.2rem;
+}
 .balls view {
   width: 0.8em;
   height: 0.8em;
