--- a/小程序模板/视频模板/videotemplate35/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate35/pages/index/index.css
@@ -426,7 +426,7 @@
     width: 0.32rem;
     height: 0.32rem;
     position: absolute;
-    top: 0rem;
+    left: 0rem;
     right: 0rem;
     border-radius: 0.05rem;
 }
